--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -1,3 +1,53 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import "./animations";
+
+
+// buttons
+
+.btn{
+    padding: 1.5rem 6rem;
+    font-size: 1.5rem;
+    border-radius: 3rem;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+
+    transition: 0.25s ease-in-out;
+
+    &:hover{
+        transform: scale(1.05);
+    }
+
+    &:active{
+        transform: translateY(5px);
+    }
+
+}
+
+.pulsate{
+    animation: pulse 20s 2s ease-in-out infinite;
+    // filter: drop-shadow(0 0 15px rgba(185, 43, 43, 0.8));
+   // filter: drop-shadow(5px 5px 10px rgba(120, 12, 91, 0.8));
+    filter: drop-shadow(-5px -5px 5px rgba(185, 43, 43, 0.8))
+
+}
+
+.fly-in-btm{
+    animation: fly-in-bottom 2s ease-in-out;
+    transition: 1s;
+}
+
+.fade-in{
+    animation: fade-in 1s 2s ease-in-out forwards;
+    opacity: 0;
+
+    &:after{
+        opacity: 100;
+    }
+}
+
+
+
+
+
+
