Add transition anim structure

--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -64,6 +64,26 @@
 
 // animations
 
+.slide-in{
+    position: fixed;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100vh;
+    background: #121519;
+    transform-origin: bottom;
+}
+
+.slide-out {
+    position: fixed;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100vh;
+    background: #121519;
+    transform-origin: top;
+}
+
 
 .pulsate{
     animation: pulse 10s 2s ease-in-out infinite;
