--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -8,11 +8,9 @@
 
 .btn{
     text-align: center;
-    padding: 1.5rem 6rem;
     font-size: 1.5rem;
     border-radius: 3rem;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-
     transition: 0.25s ease-in-out;
 
     &:hover{
@@ -23,6 +21,22 @@
         transform: translateY(5px);
     }
 
+}
+
+.primary{
+    border: 3px solid darken($color: #FF8001, $amount: 10%);
+    background-color: #FF8001;
+    padding: 1.5rem 6rem;
+}
+
+.secondary{
+    border: 3px solid darken($color: #3E0C70, $amount: 5%);
+    background-color: #3E0C70;
+    padding: 1.5rem 6rem;
+}
+
+.small{
+    padding: 0.75rem 3rem;
 }
 
 .clickable{
@@ -50,9 +64,29 @@
 
 // animations
 
+.slide-in{
+    position: fixed;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100vh;
+    background: #121519;
+    transform-origin: bottom;
+}
+
+.slide-out {
+    position: fixed;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100vh;
+    background: #121519;
+    transform-origin: top;
+}
+
 
 .pulsate{
-    animation: pulse 20s 2s ease-in-out infinite;
+    animation: pulse 10s 2s ease-in-out infinite;
     // filter: drop-shadow(0 0 15px rgba(185, 43, 43, 0.8));
    // filter: drop-shadow(5px 5px 10px rgba(120, 12, 91, 0.8));
     filter: drop-shadow(-5px -5px 5px rgba(185, 43, 43, 0.8))
@@ -65,7 +99,7 @@
 }
 
 .fade-in{
-    animation: fade-in 1s 2s ease-in-out forwards;
+    animation: fade-in 0.5s 2s ease-in-out forwards;
     opacity: 0;
 
     &:after{
@@ -77,6 +111,10 @@
 
 
 // scrollbar
+
+html{
+    scroll-behavior: smooth;
+}
 
 ::-webkit-scrollbar {
     width: 12px;
