Add basic navbar and profile data display

--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -107,6 +107,17 @@
     }
 }
 
+// navbar
+
+.nav-button{
+    transition: 0.25s ease-in-out;
+    padding-left: 5vh;
+    
+    &:hover{
+        background-color: #FF8001;
+        transform: scale(1.05);
+    }
+}
 
 
 
