Fix img styling

--- a/frontend/src/components/Slider/Slider.scss
+++ b/frontend/src/components/Slider/Slider.scss
@@ -25,7 +25,7 @@ section {
     display: flex;
     overflow: hidden;
   }
-  img {
+  img.slider-photo {
     border-radius: 10%;
     margin-bottom: 1rem;
     width: 400px;
